# ed-optimization

./: Makefile  custom_vrp_solver.py  optimization_rules.md  package.py  pyproject.toml  requirements.txt  setup.py
src/: app.py  package.py
src/application/features/order/handlers/commands/: process_order_command_handler.py
src/application/features/order/requests/commands/: __init__.py  process_order_command.py
src/ed_optimization/: app.py
src/ed_optimization/application/contracts/infrastructure/api/: abc_api.py
src/ed_optimization/application/contracts/infrastructure/message_queue/: abc_subscriber.py
src/ed_optimization/application/contracts/infrastructure/persistence/: abc_some_repository.py  abc_unit_of_work.py
src/ed_optimization/common/: generic_helpers.py  optimization_helpers.py
src/ed_optimization/documentation/: abc_optimization_api_client.py  endpoints.py  optimization_api_client.py
src/ed_optimization/infrastructure/api/: api_handler.py
src/ed_optimization/infrastructure/persistence/: db_client.py  helpers.py  unit_of_work.py
src/ed_optimization/infrastructure/persistence/repositories/: generic_repository.py  some_entity_repository.py
src/ed_optimization/infrastructure/rabbitmq/: producer.py  subscriber.py
src/ed_optimization/webapi/: api.py  dependency_setup.py
src/ed_optimization/webapi/controllers/: order_controller.py  some_feature_controller.py
src/infrastructure/rabbitmq/: subscriber.py
src/webapi/: dependency_setup.py
src/webapi/controllers/: some_feature_controller.py
(+4 files in other folders)
