[tool.poetry]
name = "ed-optimization"
version = "0.1.3"
description = ""
authors = ["ffekirnew <ffekirnew0808@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pika = "^1.3.2"
fastapi = {extras = ["standard"], version = "^0.115.5"}
websockets = "^14.1"
rmediator = "^0.2.3"
sqlalchemy = "^2.0.36"
psycopg2 = "^2.9.10"
python-dotenv = "^1.0.1"
pymongo = "^4.10.1"
jsons = "^1.6.3"
ed-domain = "^0.3.42"
ed-infrastructure = "^0.3.8"
asyncio = "^3.4.3"
ed-core = "^0.2.19"
requests = "^2.32.3"
twine = "^6.1.0"
faststream = {extras = ["rabbit"], version = "^0.5.42"}


[tool.poetry.group.test.dependencies]
pytest-cov = "^5.0.0"
pytest = "^8.3.3"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.10.0"
ruff = "^0.8.2"
poetry-plugin-export = "^1.9.0"

[build-system]
requires = ["setuptools>=46.4.0", "wheel"]
build-backend = "setuptools.build_meta"
